Agregadas páginas de donde comprar y eventos

--- a/site/index-1.html
+++ b/site/index-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Our Story</title>
+		<title>Historia</title>
 		<link rel="icon" href="images/favicon.ico">
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" href="css/style.css">
@@ -20,17 +20,6 @@
 				})
 			});
 		</script>
-		<!--[if lt IE 8]>
-			<div style=' clear: both; text-align:center; position: relative;'>
-				<a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-					<img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
-				</a>
-			</div>
-		<![endif]-->
-		<!--[if lt IE 9]>
-			<script src="js/html5shiv.js"></script>
-			<link rel="stylesheet" media="screen" href="css/ie.css">
-		<![endif]-->
 	</head>
 	<body class="">
 		<div id="bgStretch"><img src="images/bg_body.jpg" alt=""></div>
@@ -96,6 +85,14 @@
 						</p>
 						<p>
 							Actualmente Vinos Artesanales ¡Mi Madre! Tiene 11 sabores disponibles entre ellos; Mamón, Licha, Carambola, Marañón, Nance, Tamarindo, Piña, Carambolapiña, Maracuyambola, Mandarina, Mandariovos, Mora teniendo como meta lanzar entre diciembre y marzo 2022 el sabor Nance. De nuestra gama de sabores decidimos enviar cuatro de los sabores de mayor consumo en nuestra zona. Sin tener a menos el sabor exquisito que tienen los demás.
+						</p>
+						<br>
+						<h3>Misión</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquid optio culpa earum quisquam asperiores obcaecati. Provident quasi labore veritatis nemo sint totam itaque, maiores deleniti, eum commodi, vel atque porro quaerat reiciendis necessitatibus in? Dolore hic quasi iure voluptatibus.
+						</p>
+						<br>
+						<h3>Visión</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquid optio culpa earum quisquam asperiores obcaecati. Provident quasi labore veritatis nemo sint totam itaque, maiores deleniti, eum commodi, vel atque porro quaerat reiciendis necessitatibus in? Dolore hic quasi iure voluptatibus.
 						</p>
 						<div class="alright"><a href="index.html" class="btn">Productos</a></div>
 					</div>
