--- a/site/index-3.html
+++ b/site/index-3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Wine Clubs</title>
+		<title>¿Donde Comprar?</title>
 		<link rel="icon" href="images/favicon.ico">
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" href="css/style.css">
@@ -20,20 +20,9 @@
 				})
 			});
 		</script>
-		<!--[if lt IE 8]>
-			<div style=' clear: both; text-align:center; position: relative;'>
-				<a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-					<img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
-				</a>
-			</div>
-		<![endif]-->
-		<!--[if lt IE 9]>
-			<script src="js/html5shiv.js"></script>
-			<link rel="stylesheet" media="screen" href="css/ie.css">
-		<![endif]-->
 	</head>
 	<body class="">
-		<div id="bgStretch"><img src="images/bg_body.jpg" alt=""></div>
+		<div id="bgStretch"><img src="images/girl_cup_bottle_1x.jpg" alt=""></div>
 <!--==============================header=================================-->
 		<header> 
 			<div class="menu_block">
@@ -54,7 +43,7 @@
 								<li><a href="index.html">Productos</a></li>
 								<li><a href="index-1.html">Historia</a></li>
 								<li><a href="index-2.html">Recomendaciones</a></li>
-								<li class="current"><a href="index-3.html">Donde comprar?</a></li>
+								<li class="current"><a href="index-3.html">¿Donde comprar?</a></li>
 								<li><a href="index-4.html">Eventos</a></li>
 								<li><a href="index-5.html">Contacto</a></li>
 							</ul>
@@ -66,27 +55,31 @@
 			</div>
 		</header>
 <!--=======content================================-->
-		<div class="content_wrapper"><div class="ic">More Website Templates @ TemplateMonster.com - September 23, 2013!</div>
+		<div class="content_wrapper">
 			<div class="container_12">
 				<div class="grid_9">
 					<div class="content"> 
-						<img src="images/page4_img1.jpg" alt="" class="img_inner fleft">
-						<h3>Wine Clubs</h3>Lorem ipsum dolor sit amet, consectetur adipiscingew elit. In mollis erat mattis neque facilisis, sit ametewym ultricies erater rutrum. Cras facilisis, nulla vel viverram auctor, leo magnaw sodales felis, quis malesuadadyl nibh odio ut velit. Proiner pharetra luctus diam awertos scelerisque eros convallis retolo accumsanert polimm. Maecenas vehicula egestas venenatismassa. 
+						<h3>¿Donde Comprar?</h3>
+						<img src="images/vinos_todos_x.jpg" alt="" class="img_inner fleft"> 
 						<div class="clear cl1"></div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mollis erat mattis neque facilisis, sit ere amet ultricies erater rutrum. Cras facilisis, nulla vel viverra auctor, leo magnaw sodales felis quistyk malesuada nibh odio ut velit. Proiner pharetra luctus diam, a scelerisque eros convallis retolo wer accumsan. Maecenas vehicula egestas venenatis. Duis massa elit, auctor non pellentesque velitu
-						isit aet erat. Nullam eget dignissim nisi, aliquam feugiat nibh. Ut nisi nibh, sagittis ut semper wero telementum, pellentesque a odio. Phasellus vitae libero vel justo pretium dignissim. Integer dertoli semper in est nec congue. In laoreet lacus eros, vel pulvinar urna ultricies ut.</p>
+						<p>Vinos Artesanales Mi Madre, los encuentras en:</p>
 						<ul class="list2">
-							<li><span>Best Wine Club: $19.95</span>, <a href="#">Dorem ipsum dolor sit amet, consectetur </a></li>
-							<li><span>Premium Wine Club: $25.95</span>, <a href="#">Scing elit. In mollis. erat mattis neque </a></li>
-							<li><span>Golden Wine Club: $39.95</span>, <a href="#">Rat mattis neque facilisiit gere amet ultricies</a></li>
-							<li><span>Silver Wine Club: $29.95</span>, <a href="#">Mattis neque facilisiit gere amet ultricies erater</a></li>
-							<li><span>Champagne Club: $69.95</span>, <a href="#">Facilisiit gere amet ultricies erater rutrumes</a></li>
+							<li><span>Restaurante Zazil</span>, Hotel Honduras Maya, Tegucigalpa</li>
+							<li><span>Casa Artesanal</span>, City Mall, Tegucigalpa</li>
+							<li><span>Abuela Chepita</span>, Villa de San Antonio, Comayagua</li>
+							<li><span>Chorros Termales, Hotel Balneario y Restaurante</span>, Flores, Villa de San Antonio</li>
+							<li><span>Floristería Danna</span>, Barrio Torondón, Comayagua</li>
+							<li><span>Restaurante La Baranda</span>, Frente a Metro PLaza, Comayagua</li>
+							<li><span>Casa Artesanal</span>, City Mall, Tegucigalpa</li>
+							<li><span>Reposteria Kamilles</span>, haciendo postres y coctelería a base de nuestros vinos artesanales</li>
 						</ul>
-						<div class="alright"><a href="#" class="btn">Read More</a></div>
+						<br><br><br>
+						<h4>Te invitamos a seguir consumiendo lo nuestro, Vinos Artesanales Mi Madre</h4>
+						<div class="alright"><a href="#" class="btn">Ir a Productos</a></div>
 					</div>
 				</div>
 				<div class="grid_3">
-					<h1><a href="index.html"><img src="images/logo.png" alt="Decanter 1800 Winery &amp; Vineyard Toscana, Italy"></a></h1>
+					<h1><a href="index.html"><img src="images/logo_nerak_razan.jpeg"></a></h1>
 				</div>
 			</div>
 		</div>
