--- a/site/index.html
+++ b/site/index.html
@@ -18,17 +18,6 @@
 				$('#TMGPrototype2').TMGPrototype2({});
 			});
 		</script>
-		<!--[if lt IE 8]>
-			<div style=' clear: both; text-align:center; position: relative;'>
-				<a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-					<img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
-				</a>
-			</div>
-		<![endif]-->
-		<!--[if lt IE 9]>
-			<script src="js/html5shiv.js"></script>
-			<link rel="stylesheet" media="screen" href="css/ie.css">
-		<![endif]-->
 	</head>
 	<body class="page1">
 <!--==============================header=================================-->
@@ -51,7 +40,7 @@
 								<li class="current"><a href="index.html">Productos</a></li>
 								<li><a href="index-1.html">Historia</a></li>
 								<li><a href="index-2.html">Recomendaciones</a></li>
-								<li><a href="index-3.html">Donde comprar?</a></li>
+								<li><a href="index-3.html">¿Donde comprar?</a></li>
 								<li><a href="index-4.html">Eventos</a></li>
 								<li><a href="index-5.html">Contacto</a></li>
 							</ul>
