Actualizacion mision, vision y ajuste imagen en eventos

--- a/site/index-1.html
+++ b/site/index-1.html
@@ -88,12 +88,31 @@
 						</p>
 						<br>
 						<h3>Misión</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquid optio culpa earum quisquam asperiores obcaecati. Provident quasi labore veritatis nemo sint totam itaque, maiores deleniti, eum commodi, vel atque porro quaerat reiciendis necessitatibus in? Dolore hic quasi iure voluptatibus.
+						<p>Somos una empresa que rescata el patrimonio cultural intangible a través de la producción y comercialización
+							de Vinos Artesanales, salvaguardo una receta de nuestros antepasados y que ¡Mi Madre! aprendió desde 1,970. <br>
+							Nuestro producto no tiene alcohol comercial, ni levadura, ni preservantes, es totalmente natural, manteniendo así
+							sus propiedades originales y por ende ofreciendo calidad a nuestros	consumidores.
 						</p>
 						<br>
 						<h3>Visión</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquid optio culpa earum quisquam asperiores obcaecati. Provident quasi labore veritatis nemo sint totam itaque, maiores deleniti, eum commodi, vel atque porro quaerat reiciendis necessitatibus in? Dolore hic quasi iure voluptatibus.
+						<p>Para el 2025 lograr producir y comercializar nuestros productos a mayor escala, posicionando	nuestra marca
+							en el mercado hondureño, promoviendo la	cultura de consumir Vinos Artesanales ¡Mi Madre! manteniéndonos como un
+							producto nostálgico y artesanal	100% natural.
 						</p>
+						<br>
+						<h3>Valores</h3>
+						<p>
+							Nuestros Valores son: <br><br>
+							- Culturales <br><br>
+							- Higiene <br><br>
+							- Honestidad <br><br>
+							- Dedicación <br><br>
+							- Responsabilidad <br><br>
+							- Confianza <br><br>
+							- Calidad <br><br>
+							- Respeto <br><br>
+						</p>
+							
 						<div class="alright"><a href="index.html" class="btn">Productos</a></div>
 					</div>
 				</div>
