--- a/site/index-4.html
+++ b/site/index-4.html
@@ -74,7 +74,7 @@
 								<div class="extra_wrapper">
 									<h4><a href="#">Expoferia Navideña</a></h4>
 								</div>
-								<img src="images/expoferia_navideña.png" alt="" class="img_inner fleft">
+								<img src="images/expoferia_navidena.png" alt="" class="img_inner fleft">
 								<div class="clear cl2"></div>
 								AWE Honduras presentó su Expoferia Navideña, en la ciudad de Siguatepeque el dia 17 de diciembre de 2022.
 									Plaza La Amistad - 8:00 am a 4:00 pm
