agregado footer y correcciones de texto

--- a/site/index-1.html
+++ b/site/index-1.html
@@ -42,7 +42,7 @@
 							<ul class="sf-menu">
 								<li><a href="index.html">Productos</a></li>
 								<li class="current"><a href="index-1.html">Historia</a></li>
-								<li><a href="index-2.html">Recomendaciones</a></li>
+								<!--<li><a href="index-2.html">Recomendaciones</a></li> 	Seccion eliminada temporalmente-->
 								<li><a href="index-3.html">Donde comprar?</a></li>
 								<li><a href="index-4.html">Eventos</a></li>
 								<li><a href="index-5.html">Contacto</a></li>
@@ -124,10 +124,8 @@
 <!--==============================footer=================================-->
 		<footer>
 			<div class="container_12">
-				<div class="grid_12">
-					<div class="copy">
-						Decanter &copy; 2013 | <a href="#">Privacy Policy</a> | Website Template designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a>
-					</div>
+				<div class="copy">
+					&copy; 2024 |  Website por Sergio Castillo - Wilfredo Espinal
 				</div>
 			</div>
 		</footer>
