--- a/site/index-2.html
+++ b/site/index-2.html
@@ -125,10 +125,8 @@
 <!--==============================footer=================================-->
 		<footer>
 			<div class="container_12">
-				<div class="grid_12">
-					<div class="copy">
-						Decanter &copy; 2013 | <a href="#">Privacy Policy</a> | Website Template designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a>
-					</div>
+				<div class="copy">
+					&copy; 2024 |  Website por Sergio Castillo - Wilfredo Espinal
 				</div>
 			</div>
 		</footer>
