--- a/site/index-3.html
+++ b/site/index-3.html
@@ -42,7 +42,7 @@
 							<ul class="sf-menu">
 								<li><a href="index.html">Productos</a></li>
 								<li><a href="index-1.html">Historia</a></li>
-								<li><a href="index-2.html">Recomendaciones</a></li>
+								<!--<li><a href="index-2.html">Recomendaciones</a></li> 	Seccion eliminada temporalmente-->
 								<li class="current"><a href="index-3.html">¿Donde comprar?</a></li>
 								<li><a href="index-4.html">Eventos</a></li>
 								<li><a href="index-5.html">Contacto</a></li>
@@ -75,7 +75,8 @@
 						</ul>
 						<br><br><br>
 						<h4>Te invitamos a seguir consumiendo lo nuestro, Vinos Artesanales Mi Madre</h4>
-						<div class="alright"><a href="#" class="btn">Ir a Productos</a></div>
+						<h4>Para información sobre distribución o compra directa escríbenos a nuestra seccion de Contacto en el siguiente enlace:</h4>
+						<div class="alright"><a href="index-5.html" class="btn">Ir a Contacto</a></div>
 					</div>
 				</div>
 				<div class="grid_3">
@@ -88,7 +89,7 @@
 			<div class="container_12">
 				<div class="grid_12">
 					<div class="copy">
-						Decanter &copy; 2013 | <a href="#">Privacy Policy</a> | Website Template designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a>
+						&copy; 2024 |  Website por Sergio Castillo - Wilfredo Espinal
 					</div>
 				</div>
 			</div>
