--- a/site/index.html
+++ b/site/index.html
@@ -39,7 +39,7 @@
 							<ul class="sf-menu">
 								<li class="current"><a href="index.html">Productos</a></li>
 								<li><a href="index-1.html">Historia</a></li>
-								<li><a href="index-2.html">Recomendaciones</a></li>
+								<!--<li><a href="index-2.html">Recomendaciones</a></li> 	Seccion eliminada temporalmente-->
 								<li><a href="index-3.html">¿Donde comprar?</a></li>
 								<li><a href="index-4.html">Eventos</a></li>
 								<li><a href="index-5.html">Contacto</a></li>
@@ -69,7 +69,7 @@
 										<li class="p2"><span>A</span>mor de mi corazón</li>
 										<li class="p2"><span>N</span>aciste para refrescarme,</li>
 										<li class="p2"><span>C</span>on tu dulce sabor</li>
-										<li class="p2"><span>E</span>l vino eterno, razón de mi ser.</li>
+										<li class="p2"><span>E</span>l vino eterno, razón de mi ser.</li><br><br><br>
 									</ul>
 								</div>
 							</div>
@@ -117,7 +117,7 @@
 											Delicioso mamoncillo.<br>
 											Tus bolitas en mi boca<br>
 											Jugosito, rico vino"
-										</p>
+										</p><br><br><br><br><br>
 									</ul>
 								</div>
 							</div>
@@ -143,6 +143,7 @@
 										<li class="p2"><span>L</span>uz de mi paladar</li>
 										<li class="p2"><span>A</span>mores de nunca olvidar</li>
 									</ul>
+									<br><br><br><br>
 								</div>
 							</div>
 						</li>
@@ -160,7 +161,7 @@
 										<li class="p2"><span>L</span>o tienes todo</li>
 										<li class="p2"><span>I</span>gual tu color y corazón</li>
 										<li class="p2"><span>Ch</span>elita por fuera</li>
-										<li class="p2"><span>A</span>morosa por dentro</li>
+										<li class="p2"><span>A</span>morosa por dentro</li><br><br>
 									</ul>
 								</div>
 							</div>
@@ -177,7 +178,7 @@
 										<li class="p2"><span>M</span>uchos te desean, así de chiquitita</li>
 										<li class="p2"><span>O</span>h diminuta fruta, de sabor sin igual</li>
 										<li class="p2"><span>R</span>ica cuando te añejas, para</li>
-										<li class="p2"><span>A</span>manecer juntitos, en un lugar especial</li>
+										<li class="p2"><span>A</span>manecer juntitos, en un lugar especial</li><br><br>
 									</ul>
 								</div>
 							</div>
@@ -206,7 +207,7 @@
 						</li>
 						<li data-srcPreview="images/mom_show_x.jpg">
 							<div>
-								<div class="content">
+								<div class="content" style="height: 900 !important;">
 									<img src="images/bot_nance.jpeg" alt="" width="154" height="323">
 									<h3>Vino de Mandariovos</h3>
 									<p>
@@ -223,8 +224,9 @@
 										<li class="p2"><span>O</span>h, sabores frutales</li>
 										<li class="p2"><span>V</span>ida en cada copa</li>
 										<li class="p2"><span>O</span>h, brindis de emoción</li>
-										<li class="p2">¡<span>S</span>abor! Mi pasión. </li>
+										<li class="p2">¡<span>S</span>abor! Mi pasión. </li><br><br>
 									</ul>
+									
 								</div>
 							</div>
 						</li>
@@ -243,7 +245,7 @@
 											¡Caramba! Que sabor,<br>
 											De la carambolapiña<br>
 											De premio merece la estrella<br>
-											Y mi cuerpo la botella.
+											Y mi cuerpo la botella.<br><br><br><br><br><br><br><br><br>
 										</p>
 									</ul>
 								</div>
@@ -261,7 +263,7 @@
 										<li class="p2"><span>M</span>oradita y nutritiva</li>
 										<li class="p2"><span>O</span>h, fruto particular</li>
 										<li class="p2"><span>R</span>ica en Vino</li>
-										<li class="p2"><span>A</span>cidita, sabrosa, especial</li>
+										<li class="p2"><span>A</span>cidita, sabrosa, especial</li><br><br><br><br>
 									</ul>
 								</div>
 							</div>
@@ -283,17 +285,17 @@
 											Maracuyambola…<br>
 											La mezcla hace la<br>
 											Explosión, el Vino<br>
-											Mi pasión…
+											Mi pasión…<br><br><br><br>
 										</p>
 									</ul>
-									<div class="alright"><a href="#" class="btn">Productos</a></div>
+								<!--<div class="alright"><a href="#" class="btn">Productos</a></div>    Enlace opcional-->
 								</div>
 							</div>
 						</li>
 						<li data-srcPreview="images/mom_drink_x.jpg">
 							<div>
 								<div class="content">
-									<img src="images/bot_tamarindo.jpeg" alt="vino de tamarindo">
+									<img src="images/bot_tamarindo.jpeg" alt="vino de tamarindo" width="154" height="373">
 									<h3>Vino de Tamarindo</h3>
 									<p>
 										El tamarindo o dátil de la India, la detonación de sabor que tiene el fruto al
@@ -306,7 +308,7 @@
 											De las cosas que me han pasado<br>
 											Probarte es la mejor<br>
 											Disfrutarte poco a poco<br>
-											Tamarindo, sí señor.
+											Tamarindo, sí señor. <br><br><br><br><br><br><br><br>
 										</p>
 									</ul>
 								</div>
@@ -321,7 +323,7 @@
 								<div class="content">
 									<img src="images/tabla_1_x.png" alt="">
 									<h3>Tabla de quesos 1</h3>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eligendi a autem. Culpa, autem ab. Iusto itaque voluptatem eius est magnam, ratione, quo possimus totam mollitia qui nobis, dolores dolorum?</p>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eligendi a autem. Culpa, autem ab. Iusto itaque voluptatem eius est magnam, ratione, quo possimus totam mollitia qui nobis, dolores dolorum?</p><br><br><br><br><br><br><br><br>
 								</div>
 							</div>
 						</li>
@@ -330,7 +332,7 @@
 								<div class="content">
 									<img src="images/tabla_2_x.png" alt="">
 									<h3>Tabla de quesos 2</h3>
-									<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quisquam ducimus, perferendis culpa unde tempore corporis. Animi, tempora. Pariatur enim ipsa vel fugit aut non dolor dolore quia dolorum accusamus?</p>
+									<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quisquam ducimus, perferendis culpa unde tempore corporis. Animi, tempora. Pariatur enim ipsa vel fugit aut non dolor dolore quia dolorum accusamus?</p><br><br><br><br><br><br><br><br>
 								</div>
 							</div>
 						</li>
@@ -339,7 +341,7 @@
 								<div class="content">
 									<img src="images/tabla_3_x.png" alt="">
 									<h3>Tabla de quesos 3</h3>
-									<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quisquam ducimus, perferendis culpa unde tempore corporis. Animi, tempora. Pariatur enim ipsa vel fugit aut non dolor dolore quia dolorum accusamus?</p>
+									<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quisquam ducimus, perferendis culpa unde tempore corporis. Animi, tempora. Pariatur enim ipsa vel fugit aut non dolor dolore quia dolorum accusamus?</p><br><br><br><br><br><br>
 									<!--<div class="alright"><a href="#" class="btn">Productos</a></div> boton eliminado--> 
 								</div>
 							</div>
@@ -353,7 +355,7 @@
 								<div class="content">
 									<img src="images/canasta_nostalgia_x.png" alt="">
 									<h3>Canasta nostálgica</h3>
-									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita vel exercitationem dolores iste asperiores minus perspiciatis magnam, corporis, quos tenetur quisquam quod dolorum iusto delectus reiciendis voluptatem nostrum at suscipit ratione. Praesentium animi ullam architecto dolor, hic ipsum eveniet? Earum?</p>
+									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita vel exercitationem dolores iste asperiores minus perspiciatis magnam, corporis, quos tenetur quisquam quod dolorum iusto delectus reiciendis voluptatem nostrum at suscipit ratione. Praesentium animi ullam architecto dolor, hic ipsum eveniet? Earum?</p><br><br><br><br><br><br><br><br><br><br>
 								</div>
 							</div>
 						</li>
@@ -362,7 +364,7 @@
 								<div class="content">
 									<img src="images/caja_porta_1_x.png" alt="">
 									<h3>Caja portavinos 1</h3>
-									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis optio voluptatum, rerum reiciendis maiores quasi, aut consectetur, officiis temporibus unde maxime fugiat corrupti doloribus velit ad cupiditate eveniet. Tenetur placeat culpa ex necessitatibus ipsum architecto sapiente aliquam ipsa odio temporibus..</p>
+									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis optio voluptatum, rerum reiciendis maiores quasi, aut consectetur, officiis temporibus unde maxime fugiat corrupti doloribus velit ad cupiditate eveniet. Tenetur placeat culpa ex necessitatibus ipsum architecto sapiente aliquam ipsa odio temporibus..</p><br><br><br><br><br><br><br><br><br><br>
 								</div>
 							</div>
 						</li>
@@ -371,7 +373,7 @@
 								<div class="content">
 									<img src="images/caja_porta_2_x.png" alt="">
 									<h3>Caja portavinos 2</h3>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo magni ab inventore, voluptatibus vero quia nemo enim animi, maxime dolorum in! Recusandae minima in ipsam quam officiis suscipit architecto, ullam natus consectetur, incidunt assumenda nobis ex porro eaque. Facilis, qui?</p>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo magni ab inventore, voluptatibus vero quia nemo enim animi, maxime dolorum in! Recusandae minima in ipsam quam officiis suscipit architecto, ullam natus consectetur, incidunt assumenda nobis ex porro eaque. Facilis, qui?</p><br><br><br><br><br><br><br><br><br><br><br>
 								</div>
 							</div>
 						</li>
@@ -380,7 +382,7 @@
 								<div class="content">
 									<img src="images/caja_porta_3_x.png" alt="">
 									<h3>Caja portavinos 3</h3>
-									<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto recusandae aliquam eveniet incidunt tenetur, modi odio porro est praesentium ad perspiciatis doloribus qui dolorem adipisci! Possimus corrupti facilis aliquam nostrum quis culpa quibusdam minima, illo laudantium, officia nisi ea delectus!</p>
+									<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto recusandae aliquam eveniet incidunt tenetur, modi odio porro est praesentium ad perspiciatis doloribus qui dolorem adipisci! Possimus corrupti facilis aliquam nostrum quis culpa quibusdam minima, illo laudantium, officia nisi ea delectus!</p><br><br><br><br><br><br><br><br><br><br><br><br>
 								</div>
 							</div>
 						</li>
@@ -389,7 +391,7 @@
 								<div class="content">
 									<img src="images/caja_porta_4_x.png" alt="">
 									<h3>Caja portavinos 4</h3>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, ad eaque! Reprehenderit corporis molestiae accusantium? Nisi sed temporibus eaque consequatur voluptas deserunt illum vitae nemo ipsa nostrum, eligendi, ullam molestias numquam ea maxime expedita voluptatem minus. Minima dolores maiores qui!</p>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, ad eaque! Reprehenderit corporis molestiae accusantium? Nisi sed temporibus eaque consequatur voluptas deserunt illum vitae nemo ipsa nostrum, eligendi, ullam molestias numquam ea maxime expedita voluptatem minus. Minima dolores maiores qui!</p><br><br><br><br><br><br><br><br><br><br><br><br>
 								</div>
 							</div>
 						</li>
@@ -427,7 +429,7 @@
 			<div class="container_12">
 				<div class="grid_12">
 					<div class="copy">
-					Decanter &copy; 2013 | <a href="#">Privacy Policy</a> | Website Template designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a>
+						&copy; 2024 |  Website por Sergio Castillo - Wilfredo Espinal
 					</div>
 				</div>
 			</div>
