Correcciones texto acrosticos y agregado CSS p3

--- a/site/index-5.html
+++ b/site/index-5.html
@@ -125,7 +125,7 @@
 					</div>
 				</div>
 				<div class="grid_3">
-					<h1><a href="index.html"><img src="images/logo.png" alt="Decanter 1800 Winery &amp; Vineyard Toscana, Italy"></a></h1>
+					<h1><a href="index.html"><img src="images/logo_nerak_razan.jpeg"></a></h1>
 				</div>
 			</div>
 		</div>
