--- a/site/index.html
+++ b/site/index.html
@@ -63,14 +63,14 @@
 									<h3>Vino de Nance</h3>
 									<p>El Nance una fruta diminuta y amarillenta, también conocida como changunga,
 										de sabor ácido y aroma fuerte, se convierte en un vino perfecto que refresca el
-										paladar a gusto</p>
-									<ul>
-										<li class="p2"><span>N</span>unca podré olvidarte</li>
-										<li class="p2"><span>A</span>mor de mi corazón</li>
-										<li class="p2"><span>N</span>aciste para refrescarme,</li>
-										<li class="p2"><span>C</span>on tu dulce sabor</li>
-										<li class="p2"><span>E</span>l vino eterno, razón de mi ser.</li><br><br><br>
-									</ul>
+										paladar a gusto</p><br><br>
+									<p class="p3">
+										<span>N</span>unca podré olvidarte <br>
+										<span>A</span>mor de mi corazón <br>
+										<span>N</span>aciste para refrescarme, <br>
+										<span>C</span>on tu dulce sabor <br>
+										<span>E</span>l vino eterno, razón de mi ser. <br><br><br>
+									</p><br><br><br>
 								</div>
 							</div>
 						</li>
@@ -132,18 +132,18 @@
 										con poca fibra y ácida, hace que quienes degustan el vino se sientan seducidas
 										por el sabor ya que es uno de nuestros vinos más suaves y poco dulces.
 									</p>
-									<ul>
-										<li class="p2"><span>C</span>aminos que recorrer</li>
-										<li class="p2"><span>A</span>migos que recordar</li>
-										<li class="p2"><span>R</span>azones para disfrutar</li>
-										<li class="p2"><span>A</span>rdiente tu color y textura,</li>
-										<li class="p2"><span>M</span>ás tu belleza sin igual</li>
-										<li class="p2"><span>B</span>endición de mi tierra,</li>
-										<li class="p2"><span>O </span>estrella jugosa</li>
-										<li class="p2"><span>L</span>uz de mi paladar</li>
-										<li class="p2"><span>A</span>mores de nunca olvidar</li>
-									</ul>
-									<br><br><br><br>
+									<p class="p3">
+										<span>C</span>aminos que recorrer <br>
+										<span>A</span>migos que recordar <br>
+										<span>R</span>azones para disfrutar <br>
+										<span>A</span>rdiente tu color y textura, <br>
+										<span>M</span>ás tu belleza sin igual <br>
+										<span>B</span>endición de mi tierra, <br>
+										<span>O </span>estrella jugosa <br>
+										<span>L</span>uz de mi paladar <br>
+										<span>A</span>mores de nunca olvidar <br>
+									</p>
+									<br><br><br>
 								</div>
 							</div>
 						</li>
@@ -190,18 +190,18 @@
 									<h3>Vino de Mandarina</h3>
 									<p>
 										La Mandarina un cítrico que encanta por su color, sabor y aroma… este ya fermentando, con la acidez del fruto y con el toque ideal de azúcar por más de un año se convierte en un vino delicado, exquisito al paladar. 
+									</p><br>
+									<p class="p3">
+										<span>M</span>i vitamina te <br>
+										<span>A</span>mplia la visión, <br>
+										<span>N</span>ada es mejor que <br>
+										<span>D</span>esear mi sabor <br>
+										<span>A</span> todos les gusto por <br>
+										<span>R</span>ica y jugosa <br>
+										<span>I</span>nigualable color, <br>
+										<span>N</span>unca me olvides porque <br>
+										<span>A</span>naranjadita siempre soy. <br>
 									</p>
-									<ul>
-										<li class="p2"><span>M</span>i vitamina te</li>
-										<li class="p2"><span>A</span>mplia la visión,</li>
-										<li class="p2"><span>N</span>ada es mejor que</li>
-										<li class="p2"><span>D</span>esear mi sabor</li>
-										<li class="p2"><span>A</span> todos les gusto por</li>
-										<li class="p2"><span>R</span>ica y jugosa</li>
-										<li class="p2"><span>I</span>nigualable color,</li>
-										<li class="p2"><span>N</span>unca me olvides porque</li>
-										<li class="p2"><span>A</span>naranjadita siempre soy.</li>
-									</ul>
 								</div>
 							</div>
 						</li>
@@ -213,20 +213,19 @@
 									<p>
 										La Mandarina un cítrico que encanta por su color, sabor y aroma… este ya fermentando, con la acidez del fruto y con el toque ideal de azúcar por más de un año se convierte en un vino delicado, exquisito al paladar. 
 									</p>
-									<ul>
-										<li class="p2"><span>M</span>ezcla perfecta</li>
-										<li class="p2"><span>A</span>mor</li>
-										<li class="p2"><span>N</span>obleza y </li>
-										<li class="p2"><span>D</span>eseo,</li>
-										<li class="p2"><span>A</span>legría tu atributo</li>
-										<li class="p2"><span>R</span>iqueza de sentimientos</li>
-										<li class="p2"><span>I</span>nolvidable tu ser </li>
-										<li class="p2"><span>O</span>h, sabores frutales</li>
-										<li class="p2"><span>V</span>ida en cada copa</li>
-										<li class="p2"><span>O</span>h, brindis de emoción</li>
-										<li class="p2">¡<span>S</span>abor! Mi pasión. </li><br><br>
-									</ul>
-									
+									<p class="p3">
+										<span>M</span>ezcla perfecta <br>
+										<span>A</span>mor <br>
+										<span>N</span>obleza y <br>
+										<span>D</span>eseo, <br>
+										<span>A</span>legría tu atributo <br>
+										<span>R</span>iqueza de sentimientos<br>
+										<span>I</span>nolvidable tu ser <br>
+										<span>O</span>h, sabores frutales<br>
+										<span>V</span>ida en cada copa<br>
+										<span>O</span>h, brindis de emoción<br>
+										<span>S</span>abor! Mi pasión. <br><br><br>
+									</p>
 								</div>
 							</div>
 						</li>
