Agregado logo a la pagina donde comprar

--- a/site/index-1.html
+++ b/site/index-1.html
@@ -43,7 +43,7 @@
 								<li><a href="index.html">Productos</a></li>
 								<li class="current"><a href="index-1.html">Historia</a></li>
 								<!--<li><a href="index-2.html">Recomendaciones</a></li> 	Seccion eliminada temporalmente-->
-								<li><a href="index-3.html">Donde comprar?</a></li>
+								<li><a href="index-3.html">¿Donde comprar?</a></li>
 								<li><a href="index-4.html">Eventos</a></li>
 								<li><a href="index-5.html">Contacto</a></li>
 							</ul>
