--- a/site/index-3.html
+++ b/site/index-3.html
@@ -61,6 +61,7 @@
 					<div class="content"> 
 						<h3>¿Donde Comprar?</h3>
 						<img src="images/vinos_todos_x.jpg" alt="" class="img_inner fleft"> 
+						<img src="images/logo_vamm_x.jpg" alt="">
 						<div class="clear cl1"></div>
 						<p>Vinos Artesanales Mi Madre, los encuentras en:</p>
 						<ul class="list2">
