agregados todos los productos y correcciones fuente responsive

--- a/index.html
+++ b/index.html
@@ -34,35 +34,87 @@
   <main>
     <!-- Carrusel de Productos --> 
     <div class="carousel-background">
-     <div class="carousel"> 
-        <div class="carousel-item" data-bg="vinos_todos.jpg"> 
+      <div class="carousel"> 
+        <div class="carousel-item" data-bg="vino_dia_serving.jpeg"> 
             <img src="images/bot_mandarina.jpeg" alt="botella_mandarina"> 
             <div class="product-description"> 
-                <h2>Producto 1</h2> 
-                <p>Descripción del producto #1</p> 
+                <h2>Vino de Nance</h2> 
+                <p>El Nance una fruta diminuta y amarillenta, también conocida como changunga, de sabor ácido y aroma fuerte, se convierte en un vino perfecto que refresca el paladar a gusto</p> 
             </div> 
         </div> 
         <div class="carousel-item" data-bg="mom_column.jpeg"> 
             <img src="images/bot_mandarina.jpeg" alt="botella_mandarina"> 
             <div class="product-description"> 
-                <h2>Producto 2</h2> 
-                <p>Descripción del producto #2</p> 
+                <h2>Vino de Marañón</h2> 
+                <p>Del marañón hacemos uso del seudofruto, este tiene un sabor astringente y al mismo tiempo ácido, pero cuando se maneja el nivel adecuado de azúcar y con el tiempo de fermentación correcto, se convierte en uno de nuestros vinos exquisitos por la explosión de sabor y olor al verterlo en la copa y degustarlo.</p> 
             </div> 
         </div> 
-        <div class="carousel-item" data-bg="girl_cup_1.jpeg">
+        <div class="carousel-item" data-bg="girl_cup_bottle_1.jpeg">
             <img src="images/bot_mandarina.jpeg" alt="botella_mandarina"> 
             <div class="product-description"> 
-                <h2>Producto 3</h2> 
-                <p>Descripción del producto #3</p> 
+                <h2>Vino de Mamón</h2> 
+                <p>El mamón, mamoncillo o quenepa, fruto exótico que con su sabor semiácido y su pulpa traslucida que al complementarlo con el azúcar y reservando por más de un año se convierte en uno de los vinos más exquisitos y favoritos.</p> 
             </div> 
         </div> 
-        <div class="carousel-item"> 
-            <img src="images/bot_mandarina.jpeg" alt="botella_mandarina"> 
-            <div class="product-description"> 
-                <h2>Producto 4</h2> 
-                <p>Descripción del producto #4</p> 
+        <div class="carousel-item" data-bg="copas_todos.jpg">
+            <img src="images/bot_mandarina.jpeg" alt="botella_mandarina">
+            <div class="product-description">
+                <h2>Vino de Carambola</h2>
+                <p>La Carambola conocida como fruta estrella o averrhoa, por ser altamente jugosa, con poca fibra y ácida, hace que quienes degustan el vino se sientan seducidas por el sabor ya que es uno de nuestros vinos más suaves y poco dulces.</p> 
             </div> 
         </div>
+        <div class="carousel-item" data-bg="mom_show.jpeg">
+          <img src="images/bot_mandarina.jpeg" alt="botella_mandarina">
+          <div class="product-description">
+              <h2>Vino de Licha</h2>
+              <p>La Licha o Mamón chino, Rambután o Achotillo fruta tropical exótica, su pulpa jugosa y sabor dulce hace que nuestro Vino de Licha tenga un intenso sabor y preserve el aroma del fruto.</p> 
+          </div> 
+        </div>
+        <div class="carousel-item" data-bg="bottles_cubo_2.jpeg">
+          <img src="images/bot_mandarina.jpeg" alt="botella_mandarina">
+          <div class="product-description">
+            <h2>Vino de Mora</h2>
+            <p>La mora un pequeño fruto compuesto por varias drupas, que después del proceso de fermentación adquiere una fragancia exquisita y un sabor estupendo donde se mantiene la esencia del fruto. Convirtiéndose así en un vino semidulce dispuesto a complacer paladares exigentes.</p>
+          </div> 
+        </div>
+        <div class="carousel-item" data-bg="vino_dia_comparte_smile.jpeg">
+          <img src="images/bot_mandarina.jpeg" alt="botella_mandarina">
+          <div class="product-description">
+            <h2>Vino de Mandarina</h2>
+            <p>La Mandarina un cítrico que encanta por su color, sabor y aroma… este ya fermentando, con la acidez del fruto y con el toque ideal de azúcar por más de un año se convierte en un vino delicado, exquisito al paladar.</p>
+          </div> 
+        </div>
+        <div class="carousel-item" data-bg="old_bottles_v.jpg">
+          <img src="images/bot_mandarina.jpeg" alt="botella_mandarina">
+          <div class="product-description">
+            <h2>Vino de Mandariovos</h2>
+            <p>Una mezcla perfecta entre mandarina y ovo, este último conocido también como
+              hobo, ciruelo, jocota o jobo. Ambos frutos se mezclan por más de dos años para
+              dar una explosión de sabor</p>
+          </div> 
+        </div>
+        <div class="carousel-item" data-bg="vino_dia.jpeg">
+          <img src="images/bot_mandarina.jpeg" alt="botella_mandarina">
+          <div class="product-description">
+            <h2>Vino de Carambolapiña</h2>
+            <p>La Carambola conocida como fruta estrella o averrhoa este al mezclarlo con la Piña solidifican su sabor, textura y aroma surgiendo un vino dulce, pero con la llama explosiva en cada copa que degustas.</p>
+          </div> 
+        </div>
+        <div class="carousel-item" data-bg="vinos_todos.jpg">
+          <img src="images/bot_mandarina.jpeg" alt="botella_mandarina">
+          <div class="product-description">
+            <h2>Vino de Maracuyambola</h2>
+            <p>El Maracuyá, conocida también como granadilla al mezclar con la Carambola conocida como fruta estrella o averrhoa, se fusionan haciendo un detonante de sabor exquisito entre lo ácido y lo dulce. Sin duda que llamar al Maracuyá como fruta de la pasión hace que este vino sea el vino de la energía.</p>
+          </div> 
+        </div>
+        <div class="carousel-item" data-bg="bot_maranon_copa.jpeg">
+          <img src="images/bot_mandarina.jpeg" alt="botella_mandarina">
+          <div class="product-description">
+            <h2>Vino de Tamarindo</h2>
+            <p>El tamarindo o dátil de la India, la detonación de sabor que tiene el fruto al convertirlo en vino, fermentado por más de dos años hace que sea uno de nuestro Vinos con esencia tropical, rico para refrescar. Una delicia para introducirse a la generosidad que tiene la crianza del Vino de Tamarindo.</p>
+          </div> 
+        </div>
+      </div>
     </div>
   </main>
   <footer>
